--- a/style.css
+++ b/style.css
@@ -4,3 +4,66 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     box-sizing: border-box;
 }
+.container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(AI-image.avif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #fff;
+    flex-direction: column;
+}
+.hero{
+    margin: 50px auto;
+    padding: 10px;
+}
+.header {
+font-size:1.8rem;
+margin:20px;
+}
+.form{
+    display: flex;
+    outline:none;
+    border:none;
+   position: relative;
+}
+.form input {
+    font-size:30px;
+    padding:5px;
+    outline:none;
+border:none;
+border-radius: 40px;
+width:100%;
+}
+.form #selection, .btn {
+    position:absolute;
+    top:0;
+    right:0;
+}
+.form #selection {
+right: 120px;
+border:none;
+outline:none;
+height:100%;
+padding:5px;
+margin-inline: 8px;
+background-color: rgb(74, 40, 66);
+font-size: 20px;
+cursor: pointer;
+font-weight: 500;
+color:#fff;
+border-radius: 40px;
+}
+.form .btn {
+height:100%;
+border-radius: 40px;
+border: none;
+outline: none;
+background-color: rgb(10, 89, 10);
+font-size:25px;
+padding:10px;
+color:#fff;
+}
